--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <div class="modal-content">
    <span class="close" onclick="closeModal()">&times;</span>
    <p>Это модальное окно. Нажмите на крестик, чтобы закрыть его.</p>
+   <p>Это модальное окно. Нажмите на крестик, чтобы закрыть его1.</p>
   </div>
  </div>
 
