--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
  <p>Это мой первый HTML код</p>
 
- <button onclick="openModal()">Открыть модальное окно</button>
+ <button onclick="openModal()">Открыть модальное окно;</button>
 
  <div id="myModal" class="modal">
   <div class="modal-content">
    <span class="close" onclick="closeModal()">&times;</span>
-   <p>Это модальное окно. Нажмите на крестик, чтобы закрыть его.</p>
+   <p>Это модальное окно. Нажмите на крестик, чтобы закрыть его;</p>
   </div>
  </div>
 
