Обновлено имя страницы

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Пример HTML страницы</title>
+ <title>Новое мя страницы1</title>
  <style>
   h1 {
    color: blue;
